@@ -3,6 +3,7 @@
 ========================
 
 - improved `encoding` in the `FlowStreamMessage.variables(str, [data], [encoding])` method (it can be a `function(val, key)`)
+- improved `encode` argument in `String.args()` - now it can be a `function(val, key)`
 
 ========================
 0.0.66
